blink_sass/pages/_page.sass
.page-heading
  background: $white
  margin-bottom: 20px
  padding: 0

  .container
    padding: 15px
  .btn.pull-right
    margin-top: 5px

  .page-action-group
    margin-bottom: 0

.page-header
  font-size: $font-size-h3
  margin: 15px 0
  padding-bottom: 0
  border-bottom: none
  color: $isb-primary

.page-action-group
  padding: 5px 0
  margin: 15px 0
  border-radius: $border-radius-base
  background-color: $white

  li
    margin: 0 10px 0 0
    list-style: none
    display: inline-block
    vertical-align: middle

  .separator
    margin-right: 10px

.separator
  margin: 0 15px 0 5px
  display: inline-block
  height: 25px
  border-right: 1px solid $isb-dark
  vertical-align: middle

#genes_list, #variable_list
  .panel-body
    margin-bottom: 50px

#variable_list
  .dropdown-menu
    li>span
      padding: 3px 10px
      &.disabled
        pointer-events: auto
        color: #676767
        cursor: not-allowed


#variable_edit
  li.program-tab
    width: (100% / 5)
    text-align: center
    a
      padding: 10px 9px
      display: block

.varfave-ver-display
  margin-top: 15px
  font-size: 14px
  span
    font-weight: 600

